# osk-sdl

./: .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  Makefile  README.md  config.cpp  config.h  draw_helpers.cpp  draw_helpers.h  keyboard.cpp  keyboard.h  luksdevice.cpp  luksdevice.h  main.cpp  meson.build  osk.conf  run_osk.sh  tooltip.cpp  tooltip.h  util.cpp  util.h
.travis/: install_cppcheck  install_nsiqcppstyle
doc/: osk-sdl.1.scd  osk.conf.5.scd
src/: config.cpp  config.h  draw_helpers.cpp  draw_helpers.h  keyboard.cpp  keyboard.h  luksdevice.cpp  luksdevice.h  main.cpp  toggle.cpp  toggle.h  tooltip.cpp  tooltip.h  util.cpp  util.h
test/: filefilter.txt  lint_analysis.sh  meson-test-env.sh  meson.build  static_analysis.sh  test_functional.sh
